[package]
name = "warpgen"
edition = "2024"
authors = ["L0v3m0n3y"]
description = "Rust collection api for generate warp config"
readme = "readme.md"
homepage = "https://github.com/l0v3m0n3y/warpgen"
repository = "https://github.com/l0v3m0n3y/warpgen"
keywords = ["save_config_auto","save_valokda_config"]
categories = ["network-programming"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21"
chrono = "0.4" 
serde_json = "1.0"
tokio = { version = "1.34", features = ["rt-multi-thread", "macros"] }
thiserror = "1.0"
url = "2.4"
idna = "1.0"
